Fixed up some clipping issues for FE

--- a/css/results.css
+++ b/css/results.css
@@ -49,7 +49,7 @@ body {
 .feature-container img{
   margin-bottom: 10px;
   width: 400px;
-  height: 200px;
+  height: 260px;
   object-fit: cover;
 }
 
